roles/Addons/templates/efk/5.elasticsearch.yml
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch
  namespace: elk
  labels:
    k8s-app: elasticsearch
spec:
  clusterIP: None
  ports:
    - name: http
      port: 9200
      protocol: TCP
  selector:
    k8s-app: elasticsearch
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: elasticsearch
  namespace: elk
  labels:
    k8s-app: elasticsearch
spec: 
  replicas: 2
  revisionHistoryLimit: 15
  serviceName: elasticsearch
  selector:
    matchLabels:
      k8s-app: elasticsearch
  template:
    metadata:
      labels:
        k8s-app: elasticsearch
    spec:
      containers:
        - name: elasticsearch
          image: daocloud.io/buxiaomo/elasticsearch:6.2.4
          imagePullPolicy: IfNotPresent
          livenessProbe:
            httpGet:
              httpHeaders:
                - name: HeachCheck
                  value: "True"
              port: 9200
              path: /
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
          readinessProbe: 
            httpGet:
              httpHeaders:
                - name: HeachCheck
                  value: "True"
              port: 9200
              path: /
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
          resources:
            limits:
              cpu: "1"
              memory: 2Gi
            requests:
              cpu: "1"
              memory: 2Gi
          volumeMounts:
            - name: etc
              readOnly: false
              mountPath: /usr/local/elasticsearch/config/elasticsearch.yml
              subPath: elasticsearch.yml
            - name: data
              mountPath: /usr/local/elasticsearch/data
          ports:
            - name: http
              containerPort: 9200
            - name: tcp
              containerPort: 9300
      volumes:
          - name: etc
            emptyDir: {}
  volumeClaimTemplates:
    - metadata:
        name: data
        namespace: elk
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 5Gi
        storageClassName: managed-nfs-storage
