roles/Addons/templates/efk/8.Ingress.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: kibana
  namespace: elk
spec:
  rules:
    - host: kibana.kubernetes.local
      http: 
        paths: 
          - path: /
            backend:
              serviceName: kibana
              servicePort: 5601
